# rusty-chess

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  refactor.md
.github/workflows/: ai_code_review.yml  pr_code_coverage.yml  pr_status_checks.yml  release.yml  semantic_release.yml  sync_cargo_toml.yml  update-homebrew-tap.yml  upload_binaries.yml
benches/: evaluators.rs  find_best_move.rs  profile.rs
src/: game.rs  generated_masks.rs  lib.rs  main.rs
src/attack_tables/: attacks.rs  magic.rs  mod.rs  tables.rs
src/attacks/: database.rs  kings.rs  knights.rs  magics.rs  masks.rs  mod.rs  pawns.rs  relevant_bits.rs
src/board/: accessors.rs  attacks.rs  board.rs  board2.rs  castling.rs  chess_move.rs  color.rs  default.rs  init.rs  mod.rs  model.rs  move_generator.rs  move_generator2.rs  moves.rs  piece.rs  tests.rs  utils.rs
src/board/castling/: castling_rights.rs  mod.rs
src/board/moves/: make_move.rs  mod.rs
src/engine/: game.rs  mod.rs
src/eval/: bishop_pair.rs  central_control.rs  evaluation_scores.rs  evaluator.rs  forcing_moves.rs  fork.rs  king_safety.rs  knight_outpost.rs  line_pressure.rs  material.rs  mobility.rs  mod.rs  pawn_structure.rs  position.rs  rook_file_evaluator.rs  tempo.rs  threat.rs  threatened.rs
src/fen/: mod.rs  parser.rs  utils.rs
src/metrics/: game_recorder.rs  mod.rs  output.rs
src/minimax/: search.rs
src/movegen/: generator.rs  mod.rs
src/opening/: colle_system.rs  london_system.rs  mod.rs  opening_book.rs  utils.rs
src/search/: engine.rs  history.rs  minimax.rs  mod.rs  quiescence.rs  transposition_table.rs  zobrist.rs
src/terminal/: instructions.rs  introduction.rs  mod.rs  settings.rs
src/transpositions/: default.rs  entry.rs  mod.rs  table.rs
