[package]
name = "rusty-chess"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
bincode = "1.3"
once_cell = "1.21.3"

[[bin]]
name = "calculate-relevant-bits"
path = "src/bin/calculate_relevant_bits.rs"

[[bin]]
name = "find-magic-numbers"
path = "src/bin/find_magic_numbers.rs"

[[bin]]
name = "create-attack-tables"
path = "src/bin/create_attack_tables.rs"

[[bin]]
name = "generate-mask"
path = "src/bin/generate_mask.rs"

[[bin]]
name = "playground"
path = "src/bin/playground.rs"


[[bin]]
name = "create-knight-king-attack-tables"
path = "src/bin/create_knight_king_attack_tables.rs"

[[bin]]
name = "player-vs-engine"
path = "src/bin/player_vs_engine_game.rs"

[[bin]]
name = "evaluate-board"
path = "src/bin/evaluate_board.rs"

[[bin]]
name = "debug-search"
path = "src/bin/debug_search.rs"

[[bin]]
name = "find-best-move"
path = "src/bin/find_best_move.rs"

[[bench]]
name = "profile"
path = "benches/find_best_move.rs"
harness = false

[dev-dependencies]
criterion = "0.7.0"
