[package]
name = "rusty-chess"
version = "1.4.1"
edition = "2024"
description = "A highly-performant and powerful Chess engine written from scratch in Rust."
authors = ["Jimmy Wallace <jimmy.wallace145@gmail.com>"]
license = "MIT"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
bincode = "1.3"
once_cell = "1.21.3"

[[bin]]
name = "player-vs-engine"
path = "src/bin/player_vs_engine_game.rs"

[[bench]]
name = "profile"
path = "benches/find_best_move.rs"
harness = false

[dev-dependencies]
criterion = "0.7.0"
